[gd_scene load_steps=12 format=3 uid="uid://2wap0283yk0r"]

[ext_resource type="Script" uid="uid://cc8n3086pvl18" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://ceuu150fmggvr" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://defdm2qdva75q" path="res://mob.tscn" id="2_lquwl"]
[ext_resource type="FontFile" uid="uid://cyxhh7ddkn62q" path="res://fonts/Montserrat-Medium.ttf" id="4_lquwl"]
[ext_resource type="Script" uid="uid://bq4lq2wbf1rkc" path="res://score_label.gd" id="5_7mycd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0xm2m"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_h2yge"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lquwl"]
albedo_color = Color(0.96862745, 0.72156864, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7mycd"]
material = SubResource("StandardMaterial3D_lquwl")

[sub_resource type="Curve3D" id="Curve3D_272bh"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 17.4, 1.1, 18, 0, 0, 0, 0, 0, 0, -15, 1.1, 18.300001, 0, 0, 0, 0, 0, 0, -15.1, 1, -16, 0, 0, 0, 0, 0, 0, 17.1, 1, -15.5),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="Theme" id="Theme_272bh"]
default_font = ExtResource("4_lquwl")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_lquwl")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_0xm2m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_h2yge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.7071067, 0.7071067, 0, -0.7071067, 0.7071067, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 0, 0, 19.000002)
projection = 1
size = 19.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -15.9)
mesh = SubResource("CylinderMesh_7mycd")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.1, 0, -15.6)
mesh = SubResource("CylinderMesh_7mycd")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.1, 0, 18.199999)
mesh = SubResource("CylinderMesh_7mycd")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.3, 0, 17.9)
mesh = SubResource("CylinderMesh_7mycd")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_272bh")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.009258897, 0, 0.99995714, 0, 1, 0, -0.99995714, 0, -0.009258897, 17.4, 1.1, 18)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_272bh")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 26.0
offset_top = 17.0
offset_right = 123.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Puntucion: 0"
script = ExtResource("5_7mycd")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -14.0
offset_right = 169.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Presione Enter para reintentar"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
